added about file + changed index

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
-  <head></head>
+  <head>
+    <title>Github Tut</title>
+  </head>
   <body>
-    hi
+    <h1>Hello World!</h1>
   </body>
 </html>
